Ensure there is a database connection in public slot before accessing database.

DatabaseAccess reacts quite unfriendly when it was not initialized at startup.
Probably this has happened here, thus the crash.
Feel free to reopen bug if it's still crashing.

BUG: 266317